# MORPH_ESP_IDF

./: .gitignore  README.md  platformio.ini  sdkconfig.esp32dev
components/bluepad32/include/controller/: uni_gamepad.h
components/bluepad32_arduino/include/: ArduinoController.h
main/: CMakeLists.txt  batterymonitor.cpp  batterymonitor.h  constants.h  controller.cpp  controller.h  imu.cpp  imu.h  kinematics.cpp  kinematics.h  leg.cpp  leg.h  main.c  servodriver.cpp  servodriver.h  sketch.cpp  trajectory.cpp  trajectory.h  wifiserver.cpp  wifiserver.h
